--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ project/plugins/project/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 resources
-data
+/data
 .bsp
 .idea
 *.iml
