fix: Fixed issue where deequ schema check throws errors if a column doesn't exist (due to internal toCNF function).

--- a/examples/data/example.yml
+++ b/examples/data/example.yml
@@ -4,9 +4,9 @@ sources:
       - column: "Invoice/Item Number"
         type: string
         is_nullable: false
-      - column: "date"
-        type: timestamp
-        mask: "yyyy-MM-dd"
+      - column: "Date"
+        type: string
+#        mask: "yyyy-MM-dd"
         is_nullable: false
       - column: "Store Name"
         type: string
