docs: Code style fixes

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,12 +1,15 @@
+version=3.3.0
 style = default
 maxColumn = 120
 continuationIndent.callSite = 2
 continuationIndent.defnSite = 2
-align = some
+align.preset = more
 runner.optimizer.forceConfigStyleMinArgCount = 1
 rewrite.rules = [SortImports]
-importSelectors = singleLine
-project.excludeFilters = ["target/"]
+importSelectors = binPack
+project.excludeFilters = ["target/", "out/"]
+trailingCommas = never
+runner.dialect = scala212
 
 # Only format files tracked by git.
 project.git = true
